2004-05-04  Sivaiah Nallagatla <snallagatla@novell.com>
                                                                                                                             
        * libsoup/soup-soap-message.c (finalize) : free
        the elements of priv structure before freeing priv

2004-04-20  Dan Winship  <danw@ximian.com>

	* libsoup/soup-connection-ntlm.c (ntlm_authorize_post): if
	re-sending the message, call soup_message_restarted()
	(send_request): Connect to "restarted" signal, and remove the 401
	handlers from there; doing it here didn't work because if the
	connection was closed, the message would be re-sent on a new
	connection, but would still have the handlers from the old
	connection attached to it, which would make authentication fail.

	* libsoup/soup-message-handlers.c (soup_message_run_handlers):
	Copy the handler list before starting, to protect against handlers
	that modify the handler list.

2004-04-15  Dan Winship  <danw@ximian.com>

	* libsoup/soup-connection.c (soup_connection_connect_sync):
	Connect to the socket's "disconnect" signal. (We were only doing
	this from the async version before, which meant that synchronous
	SoupConnections could outlive their sockets and start causing
	errors.) #57004

	* libsoup/soup-connection-ntlm.c (send_request): Remove the old
	Authorization header before adding a new one.

2004-04-02  JP Rosevear  <jpr@ximian.com>

	* configure.in: bump version, libtool number

2004-03-15  Dan Winship  <danw@ximian.com>

	* libsoup/soup-soap-message.c (soup_soap_message_persist): Fix up
	types to kill a warning with -Wall -O2

2004-03-05  JP Rosevear <jpr@ximian.com>

	* configure.in: bump version, libtool number

2004-03-02  Dan Winship  <danw@ximian.com>

	* libsoup/soup-dns.c (check_hostent): Only loop on EINTR if
	bytes_read is -1, since the value of errno is irrelevant when
	bytes_read is 0. Probably #54960.

2004-03-01  Rodrigo Moya <rodrigo@ximian.com>
