@@ -1,5 +1,11 @@
+2004-05-11  Dan Winship  <danw@novell.com>
+
+	* libsoup/soup-misc.c (soup_signal_connect_once): Do this less
+	kludgefully, using the magic of GClosure, to fix x86_64 problems
+	reported by snorp.
+
 2004-05-04  Sivaiah Nallagatla <snallagatla@novell.com>
-                                                                                                                             
+
         * libsoup/soup-soap-message.c (finalize) : free
         the elements of priv structure before freeing priv
 
